--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,9 @@
 }
 
 body {
-  display: flex;
-  flex-flow: column wrap;
   color: black;
   background-color: #fb8c2d;
-  align-content: center;
-  height: 100vh;
+  font-family: 'Arial', 'Helvetica', sans-serif;
 }
 
 header {
@@ -21,7 +18,8 @@ header {
   border-right: 0.5em solid #e96902;
   box-shadow: 1em 1em 1em #8f4101;
   border-radius: 2em;
-  flex: 1;
+  display: flex;
+  flex-flow: column wrap;
 }
 
 header h1,
@@ -30,17 +28,29 @@ header h2 {
 }
 
 section {
-  flex: 1;
+  display: flex;
+  flex-flow: column wrap;
   background: #e96902;
   box-shadow: 1em 1em 1em #8f4101;
   margin: 0 0.5em 3em 0.5em;
   font-weight: 700;
   border-radius: 2em;
   padding: 2em;
+  align-items: center;
 }
 
 section div {
   margin-bottom: 1em;
+}
+
+section span {
+  background-color: #fb8c2d;
+  display: inline-block;
+  min-width: 8.5em;
+  box-shadow: 1em 1em 1em #8f4101;
+  border-radius: 2em;
+  padding: 0.3em;
+  text-align: center;
 }
 
 progress {
@@ -80,6 +90,9 @@ input {
   box-shadow: 1em 1em 1em #8f4101;
   border: none;
   padding: 0.5em;
+  font-weight: 700;
+  text-align: center;
+  font-size: 1em;
 }
 
 input:focus {
